make top nav collapse threshold larger to prevent it from becoming too big at some browser sizes

--- a/app/assets/stylesheets/custom_bootstrap/variables.less
+++ b/app/assets/stylesheets/custom_bootstrap/variables.less
@@ -44,6 +44,9 @@
 @navbar-default-link-active-color: @beige;
 @navbar-default-brand-color: lighten(@green, 20%);
 
+// Top nav collapse threshold
+@grid-float-breakpoint: 1000px;
+
 @dropdown-bg: lighten(@beige, 10%);
 @dropdown-link-color: @brown;
 @dropdown-link-hover-color: @brown;
